--- a/WEB/Views/Meeting/DataList.cshtml
+++ b/WEB/Views/Meeting/DataList.cshtml
@@ -163,7 +163,7 @@
         }
 
         .footer {
-            position: absolute;
+            position: fixed;
             right: 0;
             width: 100%;
             bottom: 0;
@@ -274,7 +274,7 @@
                     </div>
 
                 }
-                @*<img src="/IO/Content/images/footer_l.png" alt="wrapper" class="footer" onclick="location.href='@(System.Web.Configuration.WebConfigurationManager.ConnectionStrings["url"].ToString())/portal/wechat/user'" />*@
+                <img src="/IO/Content/images/footer_l.png" alt="wrapper" class="footer" onclick="location.href='@(System.Web.Configuration.WebConfigurationManager.ConnectionStrings["url"].ToString())/portal/wechat/user'" />
             </div>
         </div>
 
