--- a/WEB/Views/Meeting/Index.cshtml
+++ b/WEB/Views/Meeting/Index.cshtml
@@ -171,6 +171,8 @@
                 /*background: url(/IO/Content/images/wrapper_02.jpg) no-repeat;*/
                 background-size: contain;
                 box-sizing:border-box;
+                padding-bottom: 2rem;
+                margin-top: .25rem;
                 /*padding-top:20px;*/
                 /*min-height: 60vh;*/
             }
