--- a/WEB/Views/Vote/Index.cshtml
+++ b/WEB/Views/Vote/Index.cshtml
@@ -33,9 +33,9 @@
         .file-title{
              color:#304b88!important;
              width: 96%;
-    overflow: hidden;
+    /*overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: nowrap;*/
         }
         .finished>a{
             width:100%;
