--- a/WEB/Views/Meeting/LetterOfAcceptance.cshtml
+++ b/WEB/Views/Meeting/LetterOfAcceptance.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>接受函</title>
+    <title>确认函</title>
     <style>
         h4 {
             text-align: center;
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h4>@Html.Raw(letterInfo.Title)</h4>
-    <h4>@*接受函*@</h4>
+    <h4>@*确认函*@</h4>
 
     <h6>@Html.Raw(letterInfo.Content)</h6>
 
