--- a/WEB/Views/Sign/Success.cshtml
+++ b/WEB/Views/Sign/Success.cshtml
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IO在沃</title>
+    <title>IO在握</title>
     <link rel="stylesheet" href="/IO/Content/css/success.css">
     <style>
         /* 图片地址需要修改 */
