--- a/WEB/Views/Vote/VoteChart.cshtml
+++ b/WEB/Views/Vote/VoteChart.cshtml
@@ -260,7 +260,8 @@
                 },
                 axisLine:{
                     lineStyle:{
-                        color:'white',
+                        //color:'white',
+                        color: 'rgb(242, 156, 79)',
                     }
                 },
             },
@@ -270,7 +271,8 @@
                 },
                 axisLine:{
                     lineStyle:{
-                        color:'white',
+                        //color:'white',
+                        color: 'rgb(242, 156, 79)',
 
                     }
                 },
