--- a/WEB/Content/css/meeting_schedule.css
+++ b/WEB/Content/css/meeting_schedule.css
@@ -121,23 +121,25 @@ p {
         }
 
 
-    .schedule .list div {
-                display: -webkit-box;
-                display: -webkit-flex;
-                display: -moz-box;
-                display: -ms-flexbox;
-                display: flex;
-                -webkit-box-pack: center;
-                -webkit-justify-content: center;
-                   -moz-box-pack: center;
-                    -ms-flex-pack: center;
-                        justify-content: center;
-                -webkit-box-align: center;
-                -webkit-align-items: center;
-                   -moz-box-align: center;
-                    -ms-flex-align: center;
-                        align-items: center;
-            }
+        .schedule .list div {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+            -moz-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+            -moz-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            word-wrap: break-word;
+            word-break: break-all;
+        }
 
 
     .schedule .list .l {
