--- a/WEB/Views/Meeting/MeetingScheduleToLargeUnderLine.cshtml
+++ b/WEB/Views/Meeting/MeetingScheduleToLargeUnderLine.cshtml
@@ -10,11 +10,7 @@
     {
         meetingShceduleInfo = ViewBag.MeetingScheduleInfo as List<MeetingScheduleInfo>;
     }
-    bool isAccept = false;
-    if (Model.meetingmode == (int)MeetingModeTypeEnum.LargeUnderLine)
-    {
-        isAccept = Convert.ToBoolean(ViewBag.IsAccept);
-    }
+    bool isAccept = Convert.ToBoolean(ViewBag.IsAccept);
     var isImport = (bool)ViewBag.IsImport;
     var userInfo = ViewBag.Userinfo as UserInfo;
 }
@@ -156,11 +152,12 @@
                 @*<img src="~/Content/images/btn-yy.png" alt="预约参会" id="resver" />*@
             if (!string.IsNullOrEmpty(Model.doctorimg) || !string.IsNullOrEmpty(Model.doctorurl))
             {
-                if (Model.meetingmode == (int)MeetingModeTypeEnum.LargeUnderLine && isAccept)
+                if (isAccept)
                 {
                     //1、一个已接受的按钮
                     <img src="~/Content/images/acceptHalfPic.png" alt="" id="resver" />
                     <img src="~/Content/images/btn_jj@2x.png" alt="讲者简介" id="info" />
+                    @*<img src="~/Content/images/speechInfo@2x.png" alt="讲者简介" id="info" />*@
                 }
                 else
                 {
@@ -171,7 +168,7 @@
             }
             else
             {
-                if (Model.meetingmode == (int)MeetingModeTypeEnum.LargeUnderLine && isAccept)
+                if (isAccept)
                 {
                     //2、一个已接受的按钮
                     <img src="~/Content/images/accepted@2x.png" alt="" id="resver" />
@@ -190,7 +187,7 @@
         }
         else
         {
-            if (Model.meetingmode == (int)MeetingModeTypeEnum.LargeUnderLine && isAccept)
+            if (isAccept)
             {
 
             }
