--- a/WEB/Views/Survey/AlreadySurveyPrompt.cshtml
+++ b/WEB/Views/Survey/AlreadySurveyPrompt.cshtml
@@ -18,7 +18,7 @@
     </div>
     <script>
         layer.open({
-            content: "该会议不存在。",
+            content: "您已完成提交，感谢您的参与。",
             shadeClose: false
         });
     </script>
