--- a/WEB/Views/Error/Index.cshtml
+++ b/WEB/Views/Error/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
     <script>
         layer.open({
-            content: "该会议不存在。",
+            content: "该会议已取消。",
             shadeClose: false
         });
     </script>
